kubernetes/overlays/wayne/route-fe.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: ocp-demo-fe.apps.ocp4.digitaldovey.com
  path: /
  to:
    kind: Service
    name: ocp-demo-frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
